--- a/DemostracionesPRYE/Continuas/F_dist.tex
+++ b/DemostracionesPRYE/Continuas/F_dist.tex
@@ -1,7 +1,7 @@
 \subsubsection{Distribucion F}
 
 \begin{Def}
-  Sean $F$ una variable aleatoria continua. $F$ tiene una distribución
+  Sea $F$ una variable aleatoria continua. $F$ tiene una distribución
   $F$ de parámetros $u,v\in\R^+$, cuando su función de densidad es
   \[f(x)=
   \dfrac{\Gamma\left(\frac{u+v}{2}\right)\left(\frac{u}{v}\right)^{\nicefrac{u}{2}}}
