--- a/DemostracionesPRYE/Continuas/Chi_cuadrada.tex
+++ b/DemostracionesPRYE/Continuas/Chi_cuadrada.tex
@@ -1,20 +1,44 @@
 \subsubsection{Chi-cuadrada}
-Sea X una variable aleatoria tal que $X\sim\chi^2(v)$, entonces su función de densidad $fdd$ es:
-\[
-    F(x) = \frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}x^{\left(\nicefrac{v}{2}\right)-1}e^{\nicefrac{-x}{2}}
-\]
-Entonces $\text{Var}[X] = 2v$ y $\text{E}[X] = v$
+\begin{Def}
+    Sea $\chi^2$ una variable aleatoria continua. $\chi^2$ tiene una
+    distribución $\chi^2$ de parámetro $v$ si su función de densidad es:
+    \[
+        f(x) = \frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}
+        x^{\left(\nicefrac{v}{2}\right)-1}e^{\nicefrac{-x}{2}}
+    \] 
+\end{Def}
 
-\begin{Demo}
-    Lo primero, es demostrar que $F(x)$ es en efecto una función de masa
-    \begin{center}
-        \begin{derivation}
-            & \int_{-\infty}^{\infty} f(x)dx\\
-            =\\
-            & \frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}x^{\left(\nicefrac{v}{2}\right)-1}e^{\nicefrac{-x}{2}}
-        \end{derivation}
-        
-    \end{center}
+\begin{Teo}
+    Sea $\chi^2 \sim \chi^2(v)$ y $f$ su función de densidad:
+    \begin{enumerate}
+        \item Para todo $x \geq 0$, $f(x) \geq 0$
+        \item $\int_{0}^{\infty}f(x)dx$ = 1
+        \item E[$\chi^2$]$= v$
+        \item Var[$\chi^2$]$= 2v$
+    \end{enumerate}
+\end{Teo}
+
+\begin{Demo}~
+    \begin{enumerate}
+        \item Todos los términos que componen la expresión de $f$ son
+            no negativos para
+            $x \in \R$, por lo tanto $f(x)\geq 0$ para todo $x$.
+        \item Basta con demostrar la siguiente igualdad:
+            \[
+                \int_{0}^{\infty}x^{\nicefrac{v}{2}-1}
+                e^{\nicefrac{-x}{2}}dx=2^{\nicefrac{v}{2}}
+                \Gamma\left(\frac{v}{2}\right)
+            \]
+            Para esto, se hace el cambio de variable $\nicefrac{x}{2} = u$.
+            Cuando $x=0$, $u=0$; cuando $x\to\infty$, $u\to\infty$ también,
+            además $\diff{u} = $
+            por lo qe la integral queda:
+            \[
+                \int_{0}^{\infty}(2u)^{\nicefrac{v}{2}-1}
+                e^{-u}
+            \]
+    \end{enumerate}
+
     Ahora se comprueba $\text{E}[X] = v$
 
     \begin{center}
@@ -23,9 +47,11 @@ Entonces $\text{Var}[X] = 2v$ y $\text{E}[X] = v$
             =\\
             & \int_{0}^{\infty} xf(x)dx\\
             =\\
-            & \frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}x^{\left(\nicefrac{v}{2}\right)}e^{\nicefrac{-x}{2}}dx\\
+            & \frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}
+            \int_{0}^{\infty}x^{\left(\nicefrac{v}{2}\right)}e^{\nicefrac{-x}{2}}dx\\
             = \\
-            & \frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}2\int_{0}^{\infty}2^{\nicefrac{v}{2}}u^{\nicefrac{v}{2}}e^{-u}du\\
+            & \frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}
+            2\int_{0}^{\infty}2^{\nicefrac{v}{2}}u^{\nicefrac{v}{2}}e^{-u}du\\
             =\\
             & \frac{2}{\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}u^{\nicefrac{v}{2}}e^{-u}du\\
             =\\
@@ -45,15 +71,19 @@ Entonces $\text{Var}[X] = 2v$ y $\text{E}[X] = v$
             =\\
             & \text{E}[X^2]-\text{E}^2[X]\\
             =\\
-            &\frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}x^{2}x^{(\nicefrac{v}{2})-1}e^{\nicefrac{-x}{2}}dx -v^2\\
+            &\frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}x^{2}
+            x^{(\nicefrac{v}{2})-1}e^{\nicefrac{-x}{2}}dx -v^2\\
             =\\
-            &\frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}x^{(\nicefrac{v}{2})+1}e^{-\nicefrac{x}{2}}dx - v^2\\
+            &\frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}
+            x^{(\nicefrac{v}{2})+1}e^{-\nicefrac{x}{2}}dx - v^2\\
             =\\
-            &\frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}2\int_{0}^{\infty}2^{1+\nicefrac{v}{2}}u^{1+\nicefrac{v}{2}}e^{-u}du - v^2\\
+            &\frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}2\int_{0}^{\infty}
+            2^{1+\nicefrac{v}{2}}u^{1+\nicefrac{v}{2}}e^{-u}du - v^2\\
             =\\
             & \frac{4}{\Gamma\left(\frac{v}{2}\right)}\Gamma\left(\frac{v}{2}+2\right)-v^2\\
             =\\
-            & \frac{4}{\Gamma\left(\frac{v}{2}\right)}\left(\frac{v}{2}+1\right)\left(\frac{v}{2}\right)\Gamma\left(\frac{v}{2}\right)-v^2\\
+            & \frac{4}{\Gamma\left(\frac{v}{2}\right)}\left(\frac{v}{2}+1\right)\left(\frac{v}{2}\right)
+            \Gamma\left(\frac{v}{2}\right)-v^2\\
             =\\
             & 4\left(\frac{v^2}{4}\right)+4\left(\frac{v}{2}\right)-v^2\\
             =\\
