Intro discretas y continuas

--- a/DemostracionesPRYE/DistContinuas.tex
+++ b/DemostracionesPRYE/DistContinuas.tex
@@ -1,4 +1,9 @@
 \subsection{Distribuciones Continuas}
+Las distribuciones continuas son aquellas cuyas funciones de
+densidad tienen dominio en un conjunto denso en si mismo, el cual
+en esta sección se asumirá como $\R$. De no ser especificado
+el valor de una función de densidad en algún subconjunto de $\R$,
+este se asumirá como $0$.
 \input{Continuas/Normal.tex}
 \input{Continuas/Chi_cuadrada.tex}
 \input{Continuas/F_dist.tex}
