--- a/DemostracionesPRYE/Continuas/F_dist.tex
+++ b/DemostracionesPRYE/Continuas/F_dist.tex
@@ -169,29 +169,109 @@
     Recordando que $B(x\text{,}y)=\displaystyle\frac{\Gamma(x)\Gamma(y)}
     {\Gamma(x+y)}$, y expandiendo $A$ se obtiene la expresión:
     \begin{longderivation}
-      \frac{\left(\frac{u}{v}\right)^{\nicefrac{u}{2}}}
+      &\frac{\left(\frac{u}{v}\right)^{\nicefrac{u}{2}}}
       {B\left(\frac{u}{2}\text{,}\frac{v}{2}\right)}\left(\frac{v}{u}\right)^
       {(\nicefrac{u}{2})+1}
       \frac{\Gamma\left(\frac{u}{2}+1\right)\Gamma\left(\frac{v}{2}-1\right)}
       {\Gamma\left(\frac{u+v}{2}\right)}\\
       =\\
-      \left(\frac{v}{u}\right)\frac{\Gamma\left(\frac{u+v}{2}\right)}
+      &\left(\frac{v}{u}\right)\frac{\Gamma\left(\frac{u+v}{2}\right)}
       {\Gamma\left(\frac{u}{2}\right)\Gamma\left(\frac{v}{2}\right)}
       \frac{\Gamma\left(\frac{u}{2}+1\right)\Gamma\left(\frac{v}{2}-1\right)}
       {\Gamma\left(\frac{u+v}{2}\right)}\\
       =\\
-      \left(\frac{v}{u}\right)\frac{\frac{u}{2}\Gamma\left(\frac{u}{2}\right)
+      &\left(\frac{v}{u}\right)\frac{\frac{u}{2}\Gamma\left(\frac{u}{2}\right)
       \Gamma\left(\frac{v}{2}-1\right)}{\Gamma\left(\frac{u}{2}\right)
       \left(\frac{v}{2}-1\right)\Gamma\left(\frac{v}{2}-1\right)}\\
       =\\
-      \left(\frac{v}{u}\right)\left(\frac{u}{2}\right)
+      &\left(\frac{v}{u}\right)\left(\frac{u}{2}\right)
       \frac{1}{\left(\frac{v}{2}-1\right)}\\
       =\\
-      \left(\frac{v}{2}\right)\left(\frac{2}{v-2}\right)\\
+      &\left(\frac{v}{2}\right)\left(\frac{2}{v-2}\right)\\
       =\\
-      \frac{v}{v-2}
+      &\frac{v}{v-2}
     \end{longderivation}
-    Así, E$[F]=\displaystyle\frac{v}{v-2}$, y se concluye la demostración.
+    Así, E$[F]=\displaystyle\frac{v}{v-2}$.
+    \item Para demostrar la varianza, el procedimiento es casi identico
+      al anterior. Se denota $A$ de la misma manera, y se empieza con la
+      sustituión $\displaystyle\frac{u}{v}x=\tan^2\theta$.
+      \begin{longderivation}
+        &\text{Var}[F]\\
+        =\\
+        &\text{E}[F^2]-\text{E}^2[F]\\
+        =\\
+        &\int_{-\infty}^{\infty}x^2f(x)\diff{x}-\left(\frac{v}{v-2}\right)^2\\
+        =\\
+        &A\int_{0}^{\infty}x^2\frac{x^{\left(\nicefrac{u}{2}\right)-1}}
+        {\left(1+\frac{u}{v}x\right)^{\nicefrac{(u+v)}{2}}}\diff{x}
+        -\left(\frac{v}{v-2}\right)^2\\
+        =\\
+        &A\int_{0}^{\infty}\frac{x^{(\nicefrac{u}{2})+1}}
+        {\left(1+\frac{u}{v}x\right)^{\nicefrac{(u+v)}{2}}}\diff{x}
+        -\left(\frac{v}{v-2}\right)^2\\
+        \why[=]{Haciendo el cambio de variable $\frac{u}{v}x=\tan^{2}(\theta)$}\\
+        &A\int_{0}^{\frac{\pi}{2}}\frac{\left(\frac{v}{u}\right)^{(\nicefrac{u}{2})+1}
+        (\tan^2(\theta))^{(\nicefrac{u}{2})+1}}
+        {\left(1+\tan^2(\theta)\right)^{\nicefrac{(u+v)}{2}}}
+        \frac{2v}{u}\tan(\theta)\sec^2(\theta)\diff{\theta}
+        -\left(\frac{v}{v-2}\right)^2\\
+        =\\
+        &2A\left(\frac{v}{u}\right)^{(\nicefrac{u}{2})+2}
+        \int_{0}^{\frac{\pi}{2}}
+        \frac
+        {\tan^{u+3}(\theta)}
+        {\sec^{u+v-2}(\theta)}\diff{\theta}-\left(\frac{v}{v-2}\right)^2\\
+        =\\
+        &2A\left(\frac{v}{u}\right)^{(\nicefrac{u}{2})+2}
+        \int_{0}^{\frac{\pi}{2}}
+        \sin^{u+3}(\theta)\cos^{v-5}(\theta)\diff{\theta}
+        -\left(\frac{v}{v-2}\right)^2\\
+        \why[=]{Tomando la sustitución $t=\sin(\theta)$}\\
+        &2A\left(\frac{v}{u}\right)^{(\nicefrac{u}{2})+2}
+        \int_{0}^{1}t^{u+3}(1-t^2)^{\nicefrac{(v-6)}{2}}\diff{t}
+        -\left(\frac{v}{v-2}\right)^2\\
+        \why[=]{Por la sustitución $w=t^2$}\\
+        &A\left(\frac{v}{u}\right)^{(\nicefrac{u}{2})+2}
+        \int_{0}^{1}w^{(\nicefrac{u}{2})+1}(1-w)^{(\nicefrac{v}{2})-3}\diff{w}
+        -\left(\frac{v}{v-2}\right)^2\\
+        \why[=]{Definición de $B$ y expansión de $A$}\\
+        &\left(\frac{v}{u}\right)^{(\nicefrac{u}{2})+2}
+        \left(\frac{u}{v}\right)^{\nicefrac{u}{2}}
+        \frac{\Gamma\left(\frac{u+v}{2}\right)}
+        {\Gamma\left(\frac{u}{2}\right)\Gamma\left(\frac{v}{2}\right)}
+        \frac{\Gamma\left(\frac{u}{2}+2\right)\Gamma\left(\frac{v}{2}-2\right)}
+        {\Gamma\left(\frac{u+v}{2}\right)}
+        -\left(\frac{v}{v-2}\right)^2\\
+        \why[=]{Propiedades de $\Gamma$}\\
+        &\left(\frac{v}{u}\right)^2
+        \frac
+        {\left(\frac{u}{2}+1\right)\left(\frac{u}{2}\right)
+        \Gamma\left(\frac{u}{2}\right)\Gamma\left(\frac{v}{2}-2\right)}
+        {\Gamma\left(\frac{u}{2}\right)\left(\frac{v}{2}-1\right)
+        \left(\frac{v}{2}-2\right)\Gamma\left(\frac{v}{2}-2\right)}
+        -\left(\frac{v}{v-2}\right)^2\\
+        =\\
+        &\left(\frac{v}{u}\right)^2\left(\frac{u}{2}\right)
+        \left(\frac{u+2}{2}\right)
+        \left(\frac{2}{v-2}\right)\left(\frac{2}{v-4}\right)
+        -\left(\frac{v}{v-2}\right)^2\\
+        =\\
+        &\frac{v^2(u)(u+2)}{u^2(v-2)(v-4)}-\left(\frac{v}{v-2}\right)^2\\
+        =\\
+        &\frac{v^2(u+2)}{u(v-2)(v-4)}-\left(\frac{v}{v-2}\right)^2\\
+        =\\
+        &\frac{v^2(u+2)(v-2)-v^2u(v-4)}{u(v-2)^2(v-4)}\\
+        =\\
+        &\frac{v^2[(u+2)(v-2)-u(v-4)]}{u(v-2)^2(v-4)}\\
+        =\\
+        &\frac{v^2[uv-2u+2v-4-uv+4u]}{u(v-2)^2(v-4)}\\
+        =\\
+        &\frac{v^2[2u+2v-4]}{u(v-2)^2(v-4)}\\
+        =\\
+        &\frac{2v^2[u+v-2]}{u(v-2)^2(v-4)}
+      \end{longderivation}
+      Así Var$[F]=\displaystyle\frac{2v^2(u+v-2)}{u(v-2)^2(v-4)}$, 
+      y se concluye la demotración
   \end{enumerate}
 \end{Demo}
 
