--- a/DemostracionesPRYE/DistContinuas.tex
+++ b/DemostracionesPRYE/DistContinuas.tex
@@ -8,3 +8,4 @@ este se asumirá como $0$.
 \input{Continuas/Chi_cuadrada.tex}
 \input{Continuas/F_dist.tex}
 \input{Continuas/Gamma.tex}
+\input{Continuas/Weibull.tex}
