--- a/DemostracionesPRYE/Continuas/F_dist.tex
+++ b/DemostracionesPRYE/Continuas/F_dist.tex
@@ -2,7 +2,7 @@
 
 \begin{Def}
   Sean $F$ una variable aleatoria continua. $F$ tiene una distribución
-  $F$ de parámetros $u,v\in\R^+$, cuando su función de densidad es
+  $f$ de parámetros $u,v\in\R^+$, cuando su función de densidad es
   \[f(x)=
   \dfrac{\Gamma\left(\frac{u+v}{2}\right)\left(\frac{u}{v}\right)^{\nicefrac{u}{2}}}
   {\Gamma\left(\frac{u}{2}\right)\Gamma\left(\frac{v}{2}\right)}
